syntax = "proto3";
package formance.payments.connectors.grpc.proto;
option go_package = "github.com/formancehq/payments/internal/connectors/grpc/proto";

message WebhookConfig {
    string name = 1;
    string url_path = 2;
}

message Webhook {
    message Values {
        repeated string values = 1;
    }

    message BasicAuth {
        string username = 1;
        string password = 2;
    }

    BasicAuth basic_auth = 1;
    map<string, Values> headers = 2;
    map<string, Values> query_values = 3;
    bytes body = 4;
}